--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "eslint-config-airbnb": "^19.0.4",
     "i18next": "^23.10.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -48,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-plugin-functional": "^6.0.1",
+    "eslint-plugin-react": "^7.34.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "webpack": "^5.90.3"
